fix: overflow

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -15,7 +15,7 @@
 body {
   background: $bg;
   height: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   line-height: 1;
   font-family: $fontFamily;
 	font-weight: $fontWeight;
